chore: update openapi generate
